--- a/index.html
+++ b/index.html
@@ -36,7 +36,9 @@
     <div class="data">
       <div id="people">
         <h2>People</h2>
-        <input type="text" name="searchBox" />
+        <form>
+          <input type="text" id="search" />
+        </form>
       </div>
 
       <div id="films">
